# cps-info-viz

./: .gitignore  InfoVis_Artifact.html  InfoVis_Artifact.ipynb  README.md  data.py  ipums_figs.py  ipums_playground.ipynb  pkl_to_csv.py  playground.ipynb  playground.py  pyproject.toml
examples/: example.py
ipums/: asec_codebook_ddi.xml
